--- a/UsersAuthenticationJWT/appsettings.json
+++ b/UsersAuthenticationJWT/appsettings.json
@@ -7,13 +7,13 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Issuer": "JWT Builder",
-    "Key": "wx7K_foP9uZUWIgNVGqY2qQ2P5295fAo7vlqwJoBRThz4upUlMdmGq_L4bcxeOMR9q1Bj2W8P3wy0XyYTg3tXhagEo-cFOUfSRgrDSMMhcXOnuDrxKarJdEJe2VRSZ1064qEXyc8GOq_D-4zSqQrRYz-LWQpVfQ67cAXKf1Ggsc"
+    "Issuer": "DEFAULT_JWT_ISSUER",
+    "Key": "DEFAULT_JWT_KEY"
   },
   "Encryption": {
     "default": {
-      "Key": "0123456789ABCDEF",
-      "IV": "0123456789ABCDEF"
+      "Key": "",
+      "IV": ""
     }
   }
 }
