--- a/UsersAuthenticationJWT/Dockerfile
+++ b/UsersAuthenticationJWT/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 
-ENV JWT__ISSUER="Doker JWT Builder"
+ENV JWT__ISSUER="Docker JWT Builder"
 ENV JWT__KEY="wx7K_foP9uZUWIgNVGqY2qQ2P5295fAo7vlqwJoBRThz4upUlMdmGq_L4bcxeOMR9q1Bj2W8P3wy0XyYTg3tXhagEo-cFOUfSRgrDSMMhcXOnuDrxKarJdEJe2VRSZ1064qEXyc8GOq_D-4zSqQrRYz-LWQpVfQ67cAXKf1Ggsc"
 ENV ENCRYPTION__DEFAULT__KEY="0123456789ABCDEF"
 ENV ENCRYPTION__DEFAULT__IV="0123456789ABCDEF"
