--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "main2" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "main2" ]
 
 jobs:
 
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build ./UsersAuthenticationJWT/. --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file ./UsersAuthenticationJWT/Dockerfile --tag my-image-name:$(date +%s)
